feat:demonstrate html list

--- a/1-basic-html/03-format-text.html
+++ b/1-basic-html/03-format-text.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Format Text </title>
 </head>
 <body>
     <p> 
@@ -31,7 +31,9 @@
         <small>officiis</small> nulla consectetur illo ex omnis voluptatibus <br>
         <!-- Subscript -->
         H<sub>2</sub>O <br>
+        <!-- Superscript -->
         H<sup>2</sup>O <br>
+        <!-- Strikethrough -->
         <s>et earum blanditiis totam quaerat libero</s>, expedita distinctio.
     </p>
 </body>
