feat: add links and images

--- a/1-basic-html/04-list.html
+++ b/1-basic-html/04-list.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     <!-- ul -->
+    Unorder List
     <ul>
         <li>HTML</li>
         <li>CSS</li>
         <li>JS</li>
     </ul>
     <!-- ol -->
+    Ordered List
     <ol>
         <li>HTML</li>
         <li>CSS</li>
@@ -45,6 +47,7 @@
         </ul>
     </ul>
     <!-- Description List -->
+    Description List
     <dl>
         <dt>Lorem, ipsum dolor.</dt>
         <dd>Lorem ipsum dolor sit.</dd>
@@ -54,23 +57,26 @@
             <dd>Lorem, ipsum dolor.</dd>
             <dd>Minima, perferendis animi.</dd>
         </dt>
-    </dl>
+    </dl><br>
     <!-- Select Option -->
+    Dropdown Sederhana<br>
     Pilih Buah 
     <select>
         <option value="Jeruk">Jeruk</option>
         <option value="Nanas">Nanas</option>
     </select>
-    <br>
+    <br><br>
     <!-- Optgroup -->
-    Pilih Makanan
+    Dropdown Dengan Group Option <br>
+    Pilih Makanan 
     <select>
         <optgroup label="Nasgor">
             <option value="Nasgor Ayam">Nasgor Ayam</option>
             <option value="Nasgor Babat">Nasgot Babat</option>
         </optgroup>
-    </select>
+    </select><br><br>
     <!-- Datalist -->
+     Dropdown Dengan Datalist <br>
      <input list="Minuman" name="minuman" placeholder="Tambah atau pilih . . .">
      <datalist id="Minuman">
         <option value="Es Teh">Es Teh</option>
