feat: add semantic tags: <footer>, <aside>, and <figure> to blog layout

--- a/3-html-semantic-layout/03-footer-sidebar.html
+++ b/3-html-semantic-layout/03-footer-sidebar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tag Semantik</title>
+    <title>Blog Layout</title>
 </head>
 <body>
     <!-- Header -->
@@ -44,6 +44,9 @@
                 <br>Lorem ipsum dolor sit amet.
             </p>
             <article class="product-item">
+                <figure>
+                    <img src="../1-basic-html/img/lynx.png" alt="gambar" width="100">
+                </figure>
                 <dl>
                     <dt>Product Item</dt>
                     <dd>Lorem ipsum dolor sit.</dd>
@@ -59,6 +62,25 @@
                 Email: <a href="mailto:sigitstyn@gmail.com" class="email-address">sigitstyn@gmail.com</a>
             </address>
          </section>
+
+         <aside>
+            <h3>More Articles</h3>
+            <ul>
+              <li><a href="#">Lorem ipsum dolor sit amet consectetur.</a></li>
+              <li><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            </ul>
+          </aside>
     </main>
+
+    <!-- FOOTER -->
+     <footer id="footer" class="foot">
+        <p>&copy; Planstopia 2025</p>
+        <nav id="footer-nav">
+            <ul class="foot-nav">
+                <li class="foot-item"><a href="#">Contact</a></li>
+                <li class="foot-item"><a href="#">About Me</a></li>
+            </ul>
+        </nav>
+     </footer>
 </body>
 </html>
