feat: add favicon on the portofolio

--- a/4-html-mini-project/04-portofolio-final/index.html
+++ b/4-html-mini-project/04-portofolio-final/index.html
@@ -8,7 +8,9 @@
     <meta name="author" content="Sigit Setyo N">
     <title>Personal Portofolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../4-html-mini-project/img/ava.png" type="image/png">
+    <!-- type="image/x-icon" untuk icon atau.ico -->
     <style>
       * {
         box-sizing: border-box;
