--- a/4-html-mini-project/04-portofolio-final/index.html
+++ b/4-html-mini-project/04-portofolio-final/index.html
@@ -565,17 +565,17 @@
                     <article class="experience-card">
                         <h3>Fullstack Web & Android Developer</h3>
                         <h4>Freelance | Jan 2022 - Nov 2023</h4>
-                        <p>Mengembangkan dan memelihara antarmuka pengguna untuk aplikasi web utama perusahaan menggunakan React dan TypeScript. Bekerja sama dengan desainer UI/UX untuk menerjemahkan wireframe menjadi kode yang responsif dan berkinerja tinggi.</p>
+                        <p>Berpengalaman mengembangkan aplikasi web dan mobile multiplatform menggunakan Angular dan Ionic, dengan backend dan database berbasis Firebase. Untuk platform Android, pengembangan dilakukan menggunakan Capacitor yang memungkinkan akses fitur native secara optimal. Terbiasa melakukan integrasi API, autentikasi, serta deployment aplikasi ke berbagai platform. Menguasai pengelolaan data realtime, otentikasi pengguna, dan deployment.</p>
                     </article>
                     <article class="experience-card">
                         <h3>IT Support</h3>
                         <h4>Ontide Corporation | Jan 2024 - Present</h4>
-                        <p>Membantu dalam pengembangan berbagai proyek website klien, mulai dari landing page hingga situs e-commerce sederhana menggunakan HTML, CSS, dan JavaScript. Bertanggung jawab atas slicing desain dari Figma ke HTML.</p>
+                        <p>Berpengalaman dalam troubleshooting perangkat keras dan perangkat lunak, memberikan dukungan teknis secara remote, serta melakukan instalasi, konfigurasi, dan pembaruan sistem IT. Terbiasa melakukan pemeliharaan rutin pada jaringan dan server untuk memastikan performa optimal. Mengelola inventaris perangkat IT, termasuk komputer, perangkat jaringan, dan periferal, serta memastikan seluruh aset tercatat dan terjaga dengan baik. Memastikan seluruh proses IT berjalan lancar melalui pemantauan, dokumentasi, dan koordinasi dengan tim terkait.</p>
                     </article>
                     <article class="experience-card">
                         <h3>Frontend Developer</h3>
                         <h4>Freelance | May 2025 - Present</h4>
-                        <p>Terlibat dalam pembaruan konten dan perbaikan bug minor pada website resmi pemerintah daerah. Mendapatkan pengalaman pertama dalam alur kerja pengembangan perangkat lunak dalam lingkungan profesional.</p>
+                        <p>Frontend Developer expert dengan pengalaman luas dalam membangun aplikasi web modern menggunakan React, Next.js, Express, dan NestJS. Terbiasa mengimplementasikan desain antarmuka yang interaktif, responsif, serta mengoptimalkan performa aplikasi untuk berbagai perangkat. Memiliki kemampuan integrasi API, pengelolaan state, dan deployment aplikasi skala besar, serta berpengalaman dalam kolaborasi tim lintas disiplin untuk menghasilkan produk digital yang inovatif dan user-centric.</p>
                     </article>
                 </div>
             </section>
@@ -604,7 +604,7 @@
                     <div class="skill-item"><i class="devicon-mongodb-plain colored"></i> <span>MongoDB</span></div>
                     <!-- Tools -->
                     <div class="skill-item"><i class="devicon-git-plain colored"></i> <span>Git & GitHub</span></div>
-                    <div class="skill-item"><i class="devicon-postman-plain colored"></i><span>Postman</span></div>
+                    <div class="skill-item"><i class="devicon-postman-plain colored"></i> <span>Postman</span></div>
                     <div class="skill-item"><i class="devicon-figma-plain colored"></i> <span>Figma</span></div>
                 </div>
             </section>
@@ -617,7 +617,7 @@
                         <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
                         <span>Email</span>
                     </a>
-                    <a href="https://wa.me/6281234567890" target="_blank" class="contact-button" style="background-color: #25D366;">
+                    <a href="https://wa.me/6287705902302" target="_blank" class="contact-button" style="background-color: #25D366;">
                         <svg viewBox="0 0 24 24"><path d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91c0 1.79.46 3.48 1.32 4.95L2 22l5.25-1.38c1.41.79 3.03 1.21 4.79 1.21h.01c5.46 0 9.91-4.45 9.91-9.91 0-5.46-4.45-9.91-9.92-9.91zM17.43 15.56c-.22-.11-.76-.38-1.04-.44s-.47-.11-.67.11c-.2.22-.64.76-.79.91s-.29.17-.54.06c-.25-.11-1.04-.38-1.98-1.22s-1.48-1.85-1.66-2.17c-.17-.32-.01-.49.1-.64.1-.14.22-.38.33-.53s.17-.28.25-.47c.08-.19.04-.36-.02-.47s-.67-1.61-.92-2.2c-.25-.59-.5-.51-.69-.51h-.57c-.19 0-.5.11-.76.38s-1.04 1.01-1.04 2.47c0 1.46 1.07 2.87 1.22 3.06s2.09 3.19 5.07 4.48c.71.3 1.26.49 1.69.62.71.22 1.36.19 1.88.11.57-.08 1.77-.72 2.02-1.42s.25-1.29.17-1.42c-.08-.11-.29-.17-.51-.28z"/></svg>
                         <span>WhatsApp</span>
                     </a>
