--- a/index.html
+++ b/index.html
@@ -539,13 +539,13 @@
                         <h2>Frontend Developer</h2>
                         <p>Saya adalah seorang pengembang frontend yang bersemangat dalam menciptakan antarmuka pengguna yang bersih, fungsional, dan menarik secara visual. Selamat datang di portofolio saya!</p>
                         <div class="hero-buttons">
-                            <a href="CV-SIGIT-SETYO-NUGROHO.pdf" class="button" download>Resume</a>
+                            <a href="assets/CV-SIGIT-SETYO-NUGROHO.pdf" class="button" download>Resume</a>
                             <a href="#contact" class="button">Contact Me</a>
                         </div>
                     </div>
                     <div class="img-blob-wrapper">
                         <div class="blob-bg"></div>
-                        <img class="profile-img" src="/4-html-mini-project/04-portofolio-final/img/foto.png" alt="Foto Profil Sigit Setyo Nugroho">
+                        <img class="profile-img" src="/img/foto.png" alt="Foto Profil Sigit Setyo Nugroho">
                     </div>
                 </section>
             </div>
