--- a/4-html-mini-project/04-portofolio-final/index.html
+++ b/4-html-mini-project/04-portofolio-final/index.html
@@ -606,6 +606,7 @@
                     <div class="skill-item"><i class="devicon-git-plain colored"></i> <span>Git & GitHub</span></div>
                     <div class="skill-item"><i class="devicon-postman-plain colored"></i> <span>Postman</span></div>
                     <div class="skill-item"><i class="devicon-figma-plain colored"></i> <span>Figma</span></div>
+                    <div class="skill-item"><i class="devicon-axios-plain colored"></i> <span>Axios</span></div>
                 </div>
             </section>
             
